--- a/nextflow.config
+++ b/nextflow.config
@@ -1,5 +1,8 @@
 params {
+  workdir = "$PWD"
+  sampleID = "lineName"
   outdir = "$PWD/out_dir"
-  reads = "$PWD/reads.fasta"
+  reads = "$PWD/*.fastq.gz"
+  genome = "$PWD/genome.fasta"
   threads = 5
 }
