--- a/nextflow.config
+++ b/nextflow.config
@@ -1,8 +1,9 @@
 params {
   workdir = "$PWD"
   sampleID = "lineName"
-  outdir = "$PWD/out_dir"
-  reads = "$PWD/*.fastq.gz"
-  genome = "$PWD/genome.fasta"
+  outdir = "out_dir"
+  reads = "*.fastq.gz"
+  genome = "genome.fasta"
+  transgene = "construct.fasta"
   threads = 5
 }
