--- a/nextflow.config
+++ b/nextflow.config
@@ -1,9 +1,9 @@
 params {
-  workdir = "$PWD"
+  readsDir = "path/to/your/reads"
   sampleID = "lineName"
-  outdir = "out_dir"
-  reads = "*.fastq.gz"
-  genome = "genome.fasta"
-  transgene = "construct.fasta"
+  genome = "path/to/your/AgamP4.fasta"
+  transgene = "path/to/your/Transgene.fasta"
   threads = 5
 }
+
+cleanup = true
